@@ -758,7 +758,10 @@
 	* arch/arm/src/str71x: Serial output is now correct and timer interrupts are
 	  working.  The test at configs/olimex-strp711/ostest passes.  This means that
 	  the basic STR-P711 port is complete.
-	* configs/olimex-strp711/nsh:  Add a NuttShell (NSH) configuration for the
-	  STR-P711.
+	* configs/olimex-strp711/nsh:  Add and verifed a NuttShell (NSH) configuration
+	  for the STR-P711.
+	* arch/arm/str71x/str71x_serial.c:  The STR711 interrupt driven serial driver
+	  finally works after some extradinary measures to handle missed interrupts.
+	  NSH is fully functional on the Olimex STR-P711 board.
 
 
